@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Jan 14 18:49:36 2002 -->
+<!-- Fri Jan 25 09:26:36 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -170,6 +170,12 @@ that - I could live without sliced bread..."<br>
 Robin S. Socha on the <em>tmda-users mailing list</em>
 <br><br>
 
+"Just when I had decided I needed something like TMDA, I found it on
+the net. It's the most effective spam filter I've ever used. Check it
+out."<br>
+Sven Neuhaus on <em>freshmeat.net</em>
+<br><br>
+
 "Sure there are other anti-spam programs they can use, but nothing is
 as elegant as TMDA."<br>
 Vincent Danen on the <em>tmda-users mailing list</em>
@@ -177,13 +183,7 @@ Vincent Danen on the <em>tmda-users mailing list</em>
 
 "Thanks to TMDA, I don't care if my raw address (matt@lickey.com) gets
 out there."<br>
-Matt Armstrong on the <em>ding mailing list</em>
-<br><br>
-
-"Tagged Message Delivery Agent is a great way of blocking spam.  Go check it out."<br>
-Guido van Driel on the <em>qmail mailing list</em>
-<br><br>
-
+Matt Armstrong on <em>gnus.ding</em>
 
 </blockquote>
 
