@@ -1,3 +1,8 @@
+2002-01-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* results.ht (Links): Add freshmeat.net comment from Sven Neuhaus
+	to user testimonials.
+
 2002-01-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* install.ht (Links): RPMs are now built/installed directly from
